--- a/_configs/oepic.us/_config.yml
+++ b/_configs/oepic.us/_config.yml
@@ -35,6 +35,8 @@ social:
     - https://twitter.com/oepicus
     - https://www.facebook.com/profile.php?id=61584611603188
 
+google_analytics: G-2GEQY4P09T
+
 # Build settings
 # theme: minima
 plugins:
